welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:2: error: Missing closing brace `}' assumed here
var pas = 0
^Runner:6: error: ';' expected but ')' found.
)
^Runner:11: error: ')' expected but '}' found.
}
^